Add tables with shortcodes, and implement basic styling

--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -64,11 +64,12 @@ Examination of the thesis painting, the literature review, and my considerations
 The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree, but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](/3-open-questions/21/)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ([[Hacke 1976]]; [[Hacke 1978]]), and compiled in 1979 ([fig. 3.1](#fig-3-1); [table 3.1](#table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({Hacke 1976}; {Hacke 1978}).
 
 {% figure 'fig-3-1' %}
-**figure 'table-3-1'**
+
+{% figure 'table-3-1' %}
 
 In the thesis, both Mehra and Hacke are referred to, but only the Hacke-inspired (unpublished) statement is listed as an appendix to the thesis. In [table 3.1](#table-3-1) the Mehra and the Hacke statements are shown side by side with the original numbering. They appear mostly to agree, although some statements appear in different order and not all appear in both lists. The main difference is probably regarding the use of heat or raised humidity or liquid water in the treatments, along with a difference of opinion as to its consequences. In the main thesis text, I summed up my opinion regarding each of the statements, listing which option I chose to follow in a condition list ([table 3.2](#table-3-2)). My condition list was introduced with acknowledgments of the ideal nature of the list and the fact that it would probably not be possible to fulfill all of the options. Likewise, I expected that as the treatment progressed the selection of treatment methods and materials most likely would involve compromises compared with the ideal situation.
 
-**figure 'table-3-2'**
+{% figure 'table-3-2' %}
 
 A closer look at the treatment options for the thesis work reveals that item 1 (reversibility) was qualified as “optimal” rather than “full” as Mehra has it. At the student seminar the unrealistic option of full reversibility was discussed, while attempting optimal reversibility was accepted to include a possible failure situation.
 
