--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -77,7 +77,7 @@ It’s important to underline that this method is not an alternative to the use 
 
 In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn (see [[Orata 2009]]), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
 
-**figure 'table-11-1'**
+{% figure 'table-11-1' %}
 
 All the cuts, tears, and holes (more than two hundred) were mended thread by thread using Akeogard AT35[^16] applied with a tiny brush, using an optical visor. All the structural damages and the four seams were further reinforced by applying monofilament fabric patches adhered with a mixture made of 80% Plextol B500 and 20% Dispersion K360, reactivated by butyl acetate.
 
@@ -87,7 +87,7 @@ Glue-paste lining did not seem suitable, not only because it would increase the 
 
 A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ([[Orata and Capellaro 2013]]\|, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility to match specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
 
-**figure 'table-11-2'**
+{% figure 'table-11-2' %}
 
 Samples 1 and 2 are tests on the two pure resins (see [table 11.2](#table-11-2)). Each mixture was sprayed on a polyester canvas mock-up. After solvent evaporation, each was joined to a linen canvas mock-up in order to simulate the real conditions of use. The mock-ups were then placed in a vacuum bag and lined by increasing the temperature incrementally starting at 40°C going up to 80°C, applying a constant vacuum of 700 mbar. After each 10-degree increase, the bag was opened, each mock-up was tested, and the degree of adhesion was evaluated. Sample 4, composed of 30% Dispersion K360 and 70% Plextol B500, reactivated between 60°C and 70°C (shown in red in [table 11.2](#table-11-2)) was the one that showed a good combination of adhesion and reversibility.
 
