--- a/content/3-open-questions/17.md
+++ b/content/3-open-questions/17.md
@@ -58,7 +58,7 @@ A survey of the Lunder Conservation Center treatment records was initiated to id
 
 Six recipes were frequently used in the twentieth-century lining treatments and were found in forty-three of the fifty surveyed paintings ([table 17.1](#table-17-1)). These six recipes were then selected for comparative and categorical reasoning in order to answer the following queries:
 
-**figure 'table-17-1'**
+{% figure 'table-17-1' %}
 
 -   Had other institutions also observed wax-resin lining failure? This would be determined by examining a recipe frequently used by conservators working in a range of institutions: SAAM 1.
 
@@ -110,11 +110,11 @@ Some natural resins were successfully identified with GC/MSD: 5-dammarenolic aci
 
 {% figure 'fig-17-2' %}
 
-**figure 'table-17-2'**
+{% figure 'table-17-2' %}
 
 For the final stage of this research, three historical linings and associated SAAM recipes were analyzed with Py-GC/MSD: *Oak Trees* and SAAM 2; *The Lesson* and SAAM 4; *Plenty* and SAAM 5. Raw samples of Zonarez B-85 and Piccolyte S-85 were also pyrolyzed as a control standard for data comparison. The results indicated that Py-GC/MSD was more successful detecting the odd- and even-numbered hydrocarbons present in microcrystalline wax. This method was also more proficient detecting the polylimonene monomers, dimers, and trimers associated with the two proprietary resins ([table 17.3](#table-17-3); see [fig. 17.2](#fig-17-2)). After reviewing the GC/MSD data in comparison with the Py-GC/MSD data, the GC/MSD extracted ion chromatograms (EICs) were found to contain “humps” along the baseline that matched the pattern for polylimonene ([fig. 17.3](#fig-17-3)). Other recipe ingredients—beeswax, dammar, colophony, and gum elemi—were also clearly identified with Py-GC/MSD.
 
-**figure 'table-17-3'**
+{% figure 'table-17-3' %}
 
 {% figure 'fig-17-3' %}
 
