--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -58,7 +58,7 @@ The project was organized in three parts: a documentary work or study, an experi
 
 {% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' %}
 
-**figure 'table-18-1'**
+{% figure 'table-18-1' %}
 
 ## Documentary Stage
 
