--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -97,7 +97,7 @@ Differences in the amount of material poulticed nearly doubles when the tissue i
 
 The use of a two-layer application proved less effective at poulticing material into the tissue compared to using a single sheet of Evolon CR [table 49.1](#table-49-1). Wetted single-layer tissues consistently poulticed more material compared to both wetted tissues only and the combined wet and dry tissues from the Double Layer experiment. A possible explanation is that the dry tissue wicks solvent out of the wet tissue, reducing the amount of solvent delivered to the wax-resin mixture.
 
-**figure 'table-49-1'**
+{% figure 'table-49-1' %}
 
 ## Iterative Use
 
