--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -81,13 +81,13 @@ After preliminary research dedicated to the study of several protein glues with 
 
 {% figuregroup '3' 'fig-51-1-a, fig-51-1-b, fig-51-1-c, fig-51-1-d, fig-51-1-e, fig-51-1-f, fig-51-1-g, fig-51-1-h, fig-51-1-i, fig-51-1-j, fig-51-1-k, fig-51-1-l, fig-51-1-m ' %}
 
-**figure 'table-5-1'**
+{% figure 'table-51-1' %}
 
-**figure 'table-5-2'**
+{% figure 'table-51-2' %}
 
 Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials and adhesive formulations on the mechanical properties and the tendency toward biodeterioration. Peel tests showed an average peel force of 6.52 N/cm in close-weave canvases and 4.98 N/cm in open-weave ones. In general, aging significantly increased (by 10%–27%) the force needed to peel off the close-weave lining fabrics in all cases, except for those where Type 45 wheat flour (WT45) had been used. Conversely, the average peel force decreased (by 32%–39%) in linings made of open-weave canvases except for those where WT45 wheat flour was used. Results also showed that the type of flour and the degree of milling, as well as the density of the lining canvas, strongly influence the mechanical and dimensional stability of glue-paste linings and determine the failure risk of the paint layers. This approach to the possible influence of weave tightness on crack formations has been recently witnessed in a study of four paintings by Pablo Picasso ([[Fuster-López et al. 2020]]).
 
-**figure 'table-5-3'**
+{% figure 'table-51-3' %}
 
 [Fig. 51.2](#fig-51-2-a) shows the restraint tests of different lining fabrics and glue-paste linings. While the force development in the restrained raw canvases when subjected to different RH was similar for both canvas densities tested, significant differences can be observed when the same textile is used as lining fabric in combination with the different glue paste formulations. For example, adhesive mixtures containing rye Type 70 (7% protein content) develop twice the force when used in combination with close-weave fabrics than when used with open-weave fabrics over a wide range of RH conditions ([fig. 51.2.b](#fig-51-2-b)). These values drop to half for both open- and close-weave fabrics when Type 55 (Manitoba) wheat flour is used ([fig. 51.2.c](#fig-52-1-c).). In addition, it was also observed that among all the combinations tested, closely woven canvases and semiwhole flour–based recipes induce the highest contraction forces in restrained samples, leading to significant risk of cracking and delamination ([fig. 51.3](#fig-51-3)).
 
