--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -68,9 +68,9 @@ Yarns extracted from the textile used for each model were used (. They were laid
 
 The results obtained are shown in [table 59.1](#table-59-1). The N45 magnets measuring 20 x 10 x 2 mm () were selected for their dimensional characteristics, which better adapt to the magnetic system of the frame. These magnets have approximately 20.6 N in direct contact with each other, and when used to tension the thread they produce a maximum tension of 2.64 N. As shown in [table 59.2](#table-59-2), after the intervention with the neodymium magnets on the models a tension of between 2.8 and 3.5 N/cm was achieved. This tension was kept constant practically after 24 hours of having been subjected to RH oscillations. Therefore, this is an adequate tension for the desired conditions during conservation of paintings.
 
-**figure 'table-59-1'**
+{% figure 'table-59-1' %}
 
-**figure 'table-59-2'**
+{% figure 'table-59-2' %}
 
 ### Thread-by-Thread Suture
 
