--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -43,7 +43,7 @@ Strips of material sewn all around on three of four margins of banners’ perime
 
 Epitaphs (and less often banners) are painted on satin-weave dyed textiles, and the pattern of the textile is included as an element of texture in relationship with the painted surface of the composition. The painting media are proteinaceous and/or lipidic ([table 56.1](#table-56-1)) and may be associated with similar binder and pigments used to decorate wooden churches of the same period, where primed canvas strips are commonly used to secure the joints between neighboring wooden panels.
 
-**figure 'table-56-1'**
+{% figure 'table-56-1' %}
 
 ## Degradation
 
@@ -57,13 +57,13 @@ The samples were observed with light microscopy under high magnification with a 
 
 {% figure 'fig-56-2' %}
 
-**figure 'table-56-2'**
+{% figure 'table-56-2' %}
 
 ## Consolidation Tests
 
 In preparation for future interventions in cases where the degraded canvas carries a heavy load of paint strata on both sides, consolidation tests were performed on canvas, ground, and/or paint layers. Different formulated products were assessed to stabilize flaking paint, improve the strength of the layers and their adhesion to the substrate, and structurally reinforce the weakened canvas. Testing was performed on a surviving fragment of a banner and on a damaged area of a second banner that presented severe craquelure, deformation of the detached paint layers in the interface support ground, cleavage of paint layer from ground, and displaced flakes of paint stratigraphy ([table 56.3](#table-56-3)).
 
-**figure 'table-56-3'**
+{% figure 'table-56-3' %}
 
 Research on previous consolidation campaigns with similar objects reveal the use of protein glues and carboxymethyl cellulose ([[Dumitran and Rustoiu 2007\|, 30]]). Beva 371b formulations were previously used ([[Petcu 2017]]), but some of the ingredients can raise concerns for conservators. Water-based consolidation systems and adhesives prone to severe shrinkage, as are protein glues, were not considered here, due to the fragility of the untensioned canvas and paint as well as the presence of metal soaps formation.[^9] Potentially cross-linking materials were also excluded from the list.
 
