Refine table scales and clean-ups

--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -112,7 +112,7 @@ The last solution proposed for canvas consolidation consists of polyelectrolyte-
 
 Solutions 1 and 2 were applied to degraded cotton canvases by spraying and brushing and solution 3 by spraying only. The amounts applied result in weight uptakes of the canvases between 1.8% and 22.1% ([table 27.1](#table-27-1)).
 
-{% figure 'table-27-1' %}
+{% figure 'table-27-1' 'is-table-scale-6' %}
 
 #### FEG-SEM
 
