--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -74,7 +74,7 @@ Mixed treatments consist of applying a gauze with glue paste to the back of the 
 
 While in the past the majority of paintings were lined with glue paste (twenty-five out of thirty-one), the relining methods were diversified in the 2016–2017 restorations. Out of thirty-six relined paintings, only sixteen were treated with traditional lining adhesives (glue paste), six with mixed adhesives, and fourteen with synthetic adhesives. [Table 35.3](#table-35-3) summarizes the types of structural interventions carried out in 2016–2017 and compares them to past interventions.
 
-{% figure 'table-35-3' %}
+{% figure 'table-35-3' 'is-table-scale-6' %}
 
 ## Case Study: The Sacrifice of Abraham
 
