--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -70,7 +70,7 @@ The results obtained are shown in [table 59.1](#table-59-1). The N45 magnets mea
 
 {% figure 'table-59-1' %}
 
-{% figure 'table-59-2' %}
+{% figure 'table-59-2' 'is-table-scale-7' %}
 
 ### Thread-by-Thread Suture
 
