--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -77,15 +77,15 @@ The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-6
 
 1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([fig. 63.8](#fig-63-8)).
 
-{% figure 'fig-63-8' %}
+    {% figure 'fig-63-8' %}
 
 2.  The entire surface was covered with dampened blotting paper and left for eight minutes ([fig. 63.9](#fig-63-9)).
 
-{% figure 'fig-63-9' %}
+    {% figure 'fig-63-9' %}
 
 3.  A highly absorbent resin sheet was placed over the blotting paper for two minutes to soak up the grime and salt absorbed by the blotting paper ([fig. 63.10](#fig-63-10)).
 
-{% figure 'fig-63-10' %}
+    {% figure 'fig-63-10' %}
 
 4.  The blotting paper and resin sheet were removed and steps 1–3 were repeated five or six times. After the first application, the water that was sprayed on did not contain alcohol.
 
@@ -93,23 +93,23 @@ The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-6
 
 6.  The salinity concentration levels of the chloride test paper were measured each time ([fig. 63.11](#fig-63-11), [fig. 63.12](#fig-63-12), [table 63.1](#table-63-1)).
 
-{% figure 'fig-63-11' %}
+    {% figure 'fig-63-11' %}
 
-{% figure 'fig-63-12' %}
+    {% figure 'fig-63-12' %}
 
-{% figure 'table-63-1' %}
+    {% figure 'table-63-1' %}
 
 7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.13](#fig-63-13)).
 
-{% figure 'fig-63-13' %}
+    {% figure 'fig-63-13' %}
 
 ## Conclusion and Future Issues
 
 The blotting method can be used to remove residual salt from acrylic paintings painted thinly on cotton-fiber canvases. The shrinkage rate of the canvas can by kept to within 0.5% of the total surface by maintaining the painting under tension during the treatment ([table 63.2](#table-63-2), [table 63.3](#table-63-3)).
 
-{% figure 'table-63-2' %}
+{% figure 'table-63-2' 'is-table-scale-6' %}
 
-{% figure 'table-63-3' %}
+{% figure 'table-63-3' 'is-table-scale-6' %}
 
 Researchers outside of Japan have been aware of the dangers of using excess moisture when cleaning paintings since the 1980s. In particular, there has been considerable debate about problems involving acrylic paints (a relatively new painting material), such as the swelling of resins due to the impact of various additives ([[Jablonski et al. 2003]]; [[Tumosa and Mecklenburg 2004]]; [[Ormsby and Learner 2009]]; [[Doménech-Carbó et al. 2013]]; [[Toriumi 2018]]; [[Hackney, Stephen. 2020]]). Additive agents in acrylic paints tend to rise to the surface of paints, so these paintings probably lost these additives as a result of the tsunami. Furthermore, a water-based treatment was also used during the desalination process. In light of these factors, from here on we will need to ascertain the damage to the paints by carrying out experiments while preparing specimens.
 
